--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^5.6.0",
     "@reduxjs/toolkit": "^2.5.0",
     "@tailwindcss/postcss": "^4.0.3",
     "antd": "^5.23.3",
