--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^5.6.0",
+    "@cloudinary/react": "^1.13.1",
+    "@cloudinary/url-gen": "^1.21.0",
     "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.5.0",
     "@tailwindcss/postcss": "^4.0.3",
     "antd": "^5.23.3",
     "axios": "^1.7.9",
+    "cloudinary": "^2.5.1",
     "cra-template": "1.2.0",
     "firebase": "^11.2.0",
     "react": "^19.0.0",
