--- a/package.json
+++ b/package.json
@@ -11,16 +11,19 @@
     "@tailwindcss/postcss": "^4.0.3",
     "antd": "^5.23.3",
     "axios": "^1.7.9",
+    "chart.js": "^4.4.7",
     "cloudinary": "^2.5.1",
     "cra-template": "1.2.0",
     "firebase": "^11.2.0",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.0.2",
     "react-scripts": "5.0.1",
+    "react-simple-maps": "^3.0.0",
     "react-toastify": "^11.0.3",
     "sass": "^1.83.0",
     "socket.io-client": "^4.8.1",
